--- a/FraudDetector/app/build.gradle
+++ b/FraudDetector/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.fraudulentteam.frauddetector"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -18,6 +18,7 @@ android {
     }
     aaptOptions {
         noCompress "tflite"
+        noCompress "lite"
     }
 }
 
@@ -32,5 +33,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
     implementation 'com.google.firebase:firebase-ml-model-interpreter:18.0.0'
+    implementation 'org.tensorflow:tensorflow-lite:1.13.1'
 }
 apply plugin: 'com.google.gms.google-services'
